test/Failing/UnorderedPatterns.pi
module UnorderedPatterns where

data Data: Type 1 :=
  One : Data
  Two : Data
  Three : Data

f : Data -> Data
f = \d . case d of
  One -> Two
  Three -> One
  Two -> Three